...

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:id="@+id/app_properties_content">
</FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

